[workspace]
members = [ "server","core", "workspace", "asset", "project"]

[package]
name = "gawires"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Roy"]
license = "AGPLv3"
readme = "README.md"
repository = "https://github.com/metakernel/Gawires"
default-run = "gaw"

[[bin]]
name = "gaw"
path = "src/main.rs"

[dependencies]
gawcore ={ path = "./core"}

clap ={workspace = true}
paw = {workspace = true}
ratatui = "0.29.0"
crossterm = "0.28.1"

[workspace.dependencies]
notify = "8.0.0"
interprocess = "2.2.2"
dirs = "6.0.0"
petgraph = "0.7.1"
blake2 = "0.10.6"

clap = {version = "4.5.30", features = ["derive"]}
paw = "1.0.0"
