[workspace]
resolver = "3"
members = ["crates/gawires-kernel", "crates/gawires-workspace", "crates/gawires-asset", "crates/gawires-project", "crates/gawires-cli", "crates/gawires-nexus", "crates/gawires"]

[workspace.package]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
notify = "8.2.0"
interprocess = "2.2.3"
dirs = "6.0.0"
petgraph = "0.8.3"
blake2 = "0.10.6"

clap = {version = "4.5.53", features = ["derive"]}
paw = "1.0.0"

gawires = { path = "./crates/gawires" }
gawires-kernel = { path = "./crates/gawires-kernel" }
gawires-workspace = { path = "./crates/gawires-workspace" }
gawires-asset = { path = "./crates/gawires-asset" }
gawires-project = { path = "./crates/gawires-project" }
gawires-nexus = { path = "./crates/gawires-nexus" }
gawires-cli = { path = "./crates/gawires-cli" }
