[package]
name = "gawires-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gawires"
path = "src/main.rs"

[dependencies]
gawires-core = {path = "../core"}
gawires-gist = {path = "../gist"}
gawires-ext = {path = "../ext"}
gawires-central = {path = "../central"}
structopt = {version = "0.3", features = ["paw"]}
paw = "1.0.0"