[package]
name = "gawires-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gawires"
path = "src/main.rs"

[dependencies]
gawires-core = {path = "../core"}
gawires-gist = {path = "../gist"}
structopt = {version = "0.3", features = ["paw"]}
paw = "1.0.0"
notify = "4.0.17"
libloading = "0.7.0"
dokan = "0.2.0+dokan150"